5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1836_2604.log
== TEST (2019-07-01 20:34:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = [[22.4,42.8,33.3,47.5,55.6,89.8,81.2],
	  [71.5,32.7,41.6,32.1,35.6,41.7,49.8],
	  [31.8,35.6,42.8,39.9,34.3,21.9,27.8],
	  [99.9,31.6,42.7,71.6,31.9,46.7,11.1]]

for i in range(shape(x)[0]):
	print(max(x[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:34:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array[[22.4,42.8,33.3,47.5,55.6,89.8,81.2],
	  [71.5,32.7,41.6,32.1,35.6,41.7,49.8],
	  [31.8,35.6,42.8,39.9,34.3,21.9,27.8],
	  [99.9,31.6,42.7,71.6,31.9,46.7,11.1]]

for i in range(shape(x)[0]):
	print(max(x[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:35:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array[
	  [22.4,42.8,33.3,47.5,55.6,89.8,81.2],
	  [71.5,32.7,41.6,32.1,35.6,41.7,49.8],
	  [31.8,35.6,42.8,39.9,34.3,21.9,27.8],
	  [99.9,31.6,42.7,71.6,31.9,46.7,11.1]]

for i in range(shape(x)[0]):
	print(max(x[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:36:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array[
	  [22.4,42.8,33.3,47.5,55.6,89.8,81.2],
	  [71.5,32.7,41.6,32.1,35.6,41.7,49.8],
	  [31.8,35.6,42.8,39.9,34.3,21.9,27.8],
	  [99.9,31.6,42.7,71.6,31.9,46.7,11.1]]

for i in range(shape(x)[0]):
	print(max(x[i,:]))
-- EXECUTION TIME:
1.07384
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2604/main.py", line 8, in <module>
    [99.9,31.6,42.7,71.6,31.9,46.7,11.1]]
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:37:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array[
	  [22.4,42.8,33.3,47.5,55.6,89.8,81.2],
	  [71.5,32.7,41.6,32.1,35.6,41.7,49.8],
	  [31.8,35.6,42.8,39.9,34.3,21.9,27.8],
	  [99.9,31.6,42.7,71.6,31.9,46.7,11.1]]

for i in range(shape(x)[0]):
	print(max(x[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:37:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array()


for i in range(shape(x)[0]):
	print(max(x[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:37:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array()


for i in range(shape(x)[0]):
	print(max(x[i,:]))
-- EXECUTION TIME:
1.17219
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2604/main.py", line 4, in <module>
    x = array()
TypeError: Required argument 'object' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:37:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(


for i in range(shape(x)[0]):
	print(max(x[i,:]))
-- ERROR:
File "XXXX", line 7
    for i in range(shape(x)[0]):
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:13:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("v: "))

for y in range(shape(x)[0]):
	print(max(x[y]))
-- EXECUTION TIME:
0.707912
-- ERROR:
  File "/home/codebench/codes/1836/2604/main.py", line 6
    for y in range(shape(x)[0]):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:14:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("v: ")))

for y in range(shape(x)[0]):
	print(max(x[y]))
-- EXECUTION TIME:
1.02367
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
